[package]
name = "greads"
version = "0.1.0"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrust = "0.0.7"
reqwest = "0.10.1"
url = "2.1.1"
roxmltree = "0.9.0"
tokio = "0.2"
prettytable-rs = "0.8.0"
futures = "0.3.2"
spinners = "1.2.0"
ansi-escapes = "0.1.0"
oauth1 = "1.0.0"
config = "0.10"
chrono = "0.4"

[lib]
name = "greadslib"
path = "src/lib.rs"

[[bin]]
name = "greads"
path = "src/main.rs"
